# packagerbuddy

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  packagerbuddy.module  pyproject.toml  requirements.txt  runcheck  runtests  setenv  setup.py
.github/workflows/: packagerbuddy.yaml
configs/: config_modules.json  config_pycharm-community.json  config_vscode.json
examples/config/: software.json
examples/darwin-arm64/config/: software.json
examples/linux-x64/config/: software.json
examples/linux-x64/scripts/: code  modules
examples/scripts/: code  codium  modules  vscode
packagerbuddy/: archiveutils.py  cli.py  configutils.py  downloadutils.py  installutils.py  packagerbuddy.py  pathutils.py  scripts.py  scriptutils.py  settings.py
python/packagerbuddy/: packagerbuddy.py
python/packagerbuddy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: vscode
tests/: conftest.py  mock_urllib.py  mock_urllib2.py  test_archiveutils.py  test_cli.py  test_configutils.py  test_downloadutils.py  test_installutils.py  test_pathutils.py  test_scriptutils.py
tests/data/config/: software.json
tests/test_config/: software.json
tests/test_configs/: config_valid.json
tests/test_packagerbuddy/: test_packagerbuddy.py
tests/test_scripts/: valid
