[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packagerbuddy"
version = "2.0.0"
authors = [
  { name="Cedric Duriau", email="duriau.cedric@live.be" },
]
readme = "README.md"
license-files = { paths = ["LICENSE.md"] }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.0.260",
  "black>=23.3.0",
  "pip-tools>=6.12.0",
  "pytest>=7.3.1",
  "pytest-cov>=4.0.0",
]

[project.scripts]
packagerbuddy = "packagerbuddy.cli:run"

[tool.black]
line-length = 120
extend-exclude = '''
/(
  .env
)/
'''

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 120
fixable = ["I"]
exclude = [".env"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.coverage.paths]
source = ["packagerbuddy"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
